<resources>
    <string name="app_name" translatable="false">Fajar Nur Prasetyo | 1122100007</string>
    <string name="author" translatable="false">Fajar Nur Prasetyo</string>
    <string name="NIM" translatable="false">1122100007</string>
    <string name="info">Info</string>
    <string name="send">Send %d</string>
    <string name="endpoint" translatable="false">https://wsapi.simsimi.com/190410/talk</string>
    <string name="api_key" translatable="false">UUNAS5LMqOrjrZoqcjGbxXrPU.IIBGI5g1jr1B~H</string>
    <string name="request_data" translatable="false">{\"utext\":\"%s\",\"lang\":\"id\"}</string>
    <string name="type_message">Type message</string>
    <string name="about">About</string>
    <string name="rectangle">Rectangle</string>
    <string name="triangle">Triangle</string>
    <string name="circle">Circle</string>
    <string name="width">Width</string>
    <string name="length">Length</string>
    <string name="zero" translatable="false">0</string>
    <string name="base">Base</string>
    <string name="height">Height</string>
    <string name="radius">Radius</string>
    <string name="result">Result:</string>
    <string name="ellipse">Ellipse</string>
    <string name="radius_1">Radius 1</string>
    <string name="radius_2">Radius 2</string>
    <string name="parallelogram">Parallelogram</string>
</resources>